fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/Canada_Profile__c.object-meta.xml
<CustomObject>
    <label>Canada Profile</label>
    <nameField>
        <displayFormat>CAN-{00000}</displayFormat>
        <label>Canada Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canada Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>