fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/Account_Number_SAP_CODE__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_SAP_CODE__c</fullName>
    <formula>Account__r.SAP_Sold_To__c</formula>
    <label>Account Number (SAP CODE)</label>
    <type>Text</type>
</CustomField>