fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/IDN_Parent__c.field-meta.xml
<CustomField>
    <fullName>IDN_Parent__c</fullName>
    <formula>Account__r.Parent.Name</formula>
    <label>IDN Parent</label>
    <type>Text</type>
</CustomField>