fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/Last_Year_Sales_CAD__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Sales_CAD__c</fullName>
    <formula>Last_Year_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Previous Year Sales from January 1st to toadys date.</inlineHelpText>
    <label>Last Year Sales ($CAD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>