fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/Primary_GPO__c.field-meta.xml
<CustomField>
    <fullName>Primary_GPO__c</fullName>
    <formula>Text(Account__r.Main_GPO__c)</formula>
    <label>Primary GPO</label>
    <type>Text</type>
</CustomField>