fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/Rolling_12_mos_Airway_CAD__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_mos_Airway_CAD__c</fullName>
    <formula>Rolling_12_mos_Airway__c</formula>
    <inlineHelpText>Current 12months rolling sales from todays date</inlineHelpText>
    <label>Rolling 12 mos Airway ($CAD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>