fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/Rolling_12_mos_Emergency_Medicine_CAD__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_mos_Emergency_Medicine_CAD__c</fullName>
    <formula>Rolling_12_mos_Emergency_Medicine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current 12 months rolling sales from todays date.</inlineHelpText>
    <label>Rolling 12 mos Emergency Medicine ($CAD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>