fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/Rolling_12_mos_Regional__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_mos_Regional__c</fullName>
    <formula>Rolling_12_mos_Regional_Anes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current 12 months rolling sales from todays date.</inlineHelpText>
    <label>Rolling 12 mos Regional Anes ($CAD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>