fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/Rolling_12_mos_Regional_Anes__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_mos_Regional_Anes__c</fullName>
    <description>Current 12 months rolling sales from todays date.</description>
    <inlineHelpText>Current 12 months rolling sales from todays date.</inlineHelpText>
    <label>Rolling 12 mos Regional Anes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>