fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/Sales_Grade__c.field-meta.xml
<CustomField>
    <fullName>Sales_Grade__c</fullName>
    <description>Holds letter values to grade Account.</description>
    <inlineHelpText>Holds letter values to grade Account.</inlineHelpText>
    <label>Sales Grade</label>
    <length>15</length>
    <type>Text</type>
</CustomField>