fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <label>Sales Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>