fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/fields/YTD_Sales_CAD__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales_CAD__c</fullName>
    <formula>YTD_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current sales from January 1st to todays date</inlineHelpText>
    <label>YTD Sales ($CAD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>