fullSandbox11072023/force-app/main/default/objects/Canada_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Number_SAP_CODE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>